--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,15 @@ itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
 Werkzeug==1.0.1
+certifi==2020.6.20
+isort==4.3.21
+lazy-object-proxy==1.4.3
+mccabe==0.6.1
+numpy==1.19.1
+six==1.15.0
+wrapt==1.11.2
+gevent==20.6.2
+greenlet==0.4.16
+waitress==1.4.4
+zope.event==4.4
+zope.interface==5.1.0
